# PsiBar

./: .gitignore  CMakeLists.txt  README.md  build.bat  log.txt
src/: expr.cpp  expr.h  logger.cpp  logger.h  main.cpp  main.h  parser.cpp  parser.h  phibar.cpp  phibar.h  psibar.cpp  psibar.h  util.h
tests/: CMakeLists.txt  tests.cpp  unitTests.cpp  unitTests.h
